20231113_URLをURIcreateに修正